--- a/.env
+++ b/.env
@@ -1,1 +1,15 @@
--- api keys y esas cosa
+# Your Auth0 application's Client ID
+AUTH0_CLIENT_ID=nblpmJIEP5B17zLriR8axxDVYLRrA0V6
+
+# The URL of your Auth0 tenant domain
+AUTH0_DOMAIN=dev-0ch61mzg1pehbx2g.us.auth0.com
+
+# Your Auth0 application's Client Secret
+AUTH0_CLIENT_SECRET=7jn6IQGBBJ5VCm2KxFnpKrxrXb-wZTPAhzD45zkj6NaZk1NuQqOBlz52MeBGTrCg
+
+# A long, secret value used to encrypt the session cookie.
+# This can be generated using `openssl rand -hex 32` from your shell.
+AUTH0_COOKIE_SECRET=
+
+# A url your application is accessible from. Update this as appropriate.
+AUTH0_BASE_URL=http://localhost:8080
