--- a/app/composer.json
+++ b/app/composer.json
@@ -5,7 +5,8 @@
         "http-interop/http-factory-guzzle": "^1.2",
         "auth0/auth0-php": "^8.17",
         "steampixel/simple-php-router": "^0.7.1",
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "pusher/pusher-php-server": "^7.2"
     },
     "config": {
         "allow-plugins": {
